# prgbfx

./: CMakeLists.txt  README.md
include/: ColorModifier.hpp  ColorModifierLoudness.hpp  Effect.hpp  EffectChain.hpp  EffectColor.hpp  Limiter.hpp  PositionModifier.hpp  Scene.hpp  Shape.hpp  SoundObserver.hpp
include/effects/: EffectArrayAbstract.hpp  EffectCurtain.hpp  EffectDots.hpp  EffectFountain.hpp  EffectGradient.hpp  EffectHello.hpp  EffectLoudnessLines.hpp  EffectShapeFill.hpp  EffectSparkle.hpp  EffectSpit.hpp  EffectVUMeter.hpp
